# lite-dep-check

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
lite_dep_check/: __init__.py  core.py
tests/: test_lite_dep_check.py
