[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-dep-check"
version = "1.0.0"
description = "Lite check python dependencies for updates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "raccoonette"}]

[project.urls]
Homepage = "https://github.com/MopicMP/lite-dep-check"
